[gd_scene load_steps=15 format=3 uid="uid://ha0o4rl1eq82"]

[ext_resource type="Script" path="res://scripts/ship.gd" id="1_jh4y2"]
[ext_resource type="Texture2D" uid="uid://buelentlc2dql" path="res://assets/ships/cog.png" id="2_n42ip"]
[ext_resource type="Texture2D" uid="uid://c6wtev3eeyr3y" path="res://assets/ships/carrack.png" id="3_c0kv7"]
[ext_resource type="Texture2D" uid="uid://pg63hjid62v8" path="res://assets/ships/dhow.png" id="4_3h15d"]
[ext_resource type="Texture2D" uid="uid://cg75of8ca7fux" path="res://assets/ships/junk.png" id="5_3kjb7"]
[ext_resource type="Texture2D" uid="uid://bx3x1iveo5h0e" path="res://assets/ships/galley.png" id="6_hcl8q"]
[ext_resource type="Texture2D" uid="uid://urxkplcjdoxu" path="res://assets/ships/knarr.png" id="7_jj8cu"]
[ext_resource type="Texture2D" uid="uid://dyh7ji7xfj5l6" path="res://assets/ships/drakkar.png" id="8_dcker"]
[ext_resource type="PackedScene" uid="uid://byodbugas7gf8" path="res://scenes/trail.tscn" id="9_alm17"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tcak8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_c0kv7")
}],
"loop": true,
"name": &"Carrack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_n42ip")
}],
"loop": false,
"name": &"Cog",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_3h15d")
}],
"loop": true,
"name": &"Dhow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_dcker")
}],
"loop": true,
"name": &"Drakkar",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_hcl8q")
}],
"loop": true,
"name": &"Galley",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_3kjb7")
}],
"loop": true,
"name": &"Junk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_jj8cu")
}],
"loop": true,
"name": &"Knarr",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_28dgm"]
size = Vector2(62, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jgnrn"]
size = Vector2(392, 389)

[sub_resource type="Curve" id="Curve_wtvo5"]
_data = [Vector2(0, 0), 0.0, 0.441509, 0, 1, Vector2(1, 0.441509), 0.441509, 0.0, 1, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_dx8me"]
colors = PackedColorArray(1, 1, 1, 0.172549, 1, 1, 1, 0.843137)

[node name="Ship" type="CharacterBody2D"]
script = ExtResource("1_jh4y2")

[node name="Ship2D" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_tcak8")
animation = &"Knarr"
autoplay = "Cog"
offset = Vector2(4, 0)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-3.63798e-12, 9.53674e-07)
rotation = 1.5708
shape = SubResource("RectangleShape2D_28dgm")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.3, 1.3)
position_smoothing_enabled = true
position_smoothing_speed = 7.0
metadata/_edit_lock_ = true

[node name="RightWeapon" type="Marker2D" parent="."]
position = Vector2(12, 3)
metadata/_edit_lock_ = true

[node name="LeftWeapon" type="Marker2D" parent="."]
position = Vector2(-12, 3)
metadata/_edit_lock_ = true

[node name="WeaponOverlay" type="Area2D" parent="."]
visible = false
position = Vector2(-21, 3)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponOverlay"]
position = Vector2(21, -3)
shape = SubResource("RectangleShape2D_jgnrn")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 36)
metadata/_edit_lock_ = true

[node name="Line2D" parent="Marker2D" instance=ExtResource("9_alm17")]
top_level = true
z_index = -1
width = 24.0
width_curve = SubResource("Curve_wtvo5")
gradient = SubResource("Gradient_dx8me")
joint_mode = 1
begin_cap_mode = 1
end_cap_mode = 1

[connection signal="body_entered" from="WeaponOverlay" to="." method="_on_overlay_body_entered"]
[connection signal="body_exited" from="WeaponOverlay" to="." method="_on_overlay_body_exited"]
